Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
Centos 6.3/Windows 7
-
Patch Available
Description
TNonblockingServer fails to release active TConnections on shutdown (per comments in the code). An important side effect is that the connection owned resources are not freed, in particular destructor clean up code in user defined service handlers. Also the interdependency between Threads and TNonblockingIOThreads via shared_ptr causes all of these objects to leak. This patch reduces the leaked heap blocks from > 100 to 1 on my test machines using an assortment of threads and terminal connection states.